; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/qat/qat_common/extr_qat_hal.c_qat_hal_wr_indr_csr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/qat/qat_common/extr_qat_hal.c_qat_hal_wr_indr_csr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.icp_qat_fw_loader_handle = type { i32 }

@CSR_CTX_POINTER = common dso_local global i32 0, align 4
@ICP_QAT_UCLO_MAX_CTX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.icp_qat_fw_loader_handle*, i8, i32, i32, i32)* @qat_hal_wr_indr_csr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @qat_hal_wr_indr_csr(%struct.icp_qat_fw_loader_handle* %0, i8 zeroext %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.icp_qat_fw_loader_handle*, align 8
  %7 = alloca i8, align 1
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.icp_qat_fw_loader_handle* %0, %struct.icp_qat_fw_loader_handle** %6, align 8
  store i8 %1, i8* %7, align 1
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load %struct.icp_qat_fw_loader_handle*, %struct.icp_qat_fw_loader_handle** %6, align 8
  %14 = load i8, i8* %7, align 1
  %15 = load i32, i32* @CSR_CTX_POINTER, align 4
  %16 = call i32 @qat_hal_rd_ae_csr(%struct.icp_qat_fw_loader_handle* %13, i8 zeroext %14, i32 %15)
  store i32 %16, i32* %12, align 4
  store i32 0, i32* %11, align 4
  br label %17

17:                                               ; preds = %39, %5
  %18 = load i32, i32* %11, align 4
  %19 = load i32, i32* @ICP_QAT_UCLO_MAX_CTX, align 4
  %20 = icmp ult i32 %18, %19
  br i1 %20, label %21, label %42

21:                                               ; preds = %17
  %22 = load i32, i32* %8, align 4
  %23 = load i32, i32* %11, align 4
  %24 = shl i32 1, %23
  %25 = and i32 %22, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %28, label %27

27:                                               ; preds = %21
  br label %39

28:                                               ; preds = %21
  %29 = load %struct.icp_qat_fw_loader_handle*, %struct.icp_qat_fw_loader_handle** %6, align 8
  %30 = load i8, i8* %7, align 1
  %31 = load i32, i32* @CSR_CTX_POINTER, align 4
  %32 = load i32, i32* %11, align 4
  %33 = call i32 @qat_hal_wr_ae_csr(%struct.icp_qat_fw_loader_handle* %29, i8 zeroext %30, i32 %31, i32 %32)
  %34 = load %struct.icp_qat_fw_loader_handle*, %struct.icp_qat_fw_loader_handle** %6, align 8
  %35 = load i8, i8* %7, align 1
  %36 = load i32, i32* %9, align 4
  %37 = load i32, i32* %10, align 4
  %38 = call i32 @qat_hal_wr_ae_csr(%struct.icp_qat_fw_loader_handle* %34, i8 zeroext %35, i32 %36, i32 %37)
  br label %39

39:                                               ; preds = %28, %27
  %40 = load i32, i32* %11, align 4
  %41 = add i32 %40, 1
  store i32 %41, i32* %11, align 4
  br label %17

42:                                               ; preds = %17
  %43 = load %struct.icp_qat_fw_loader_handle*, %struct.icp_qat_fw_loader_handle** %6, align 8
  %44 = load i8, i8* %7, align 1
  %45 = load i32, i32* @CSR_CTX_POINTER, align 4
  %46 = load i32, i32* %12, align 4
  %47 = call i32 @qat_hal_wr_ae_csr(%struct.icp_qat_fw_loader_handle* %43, i8 zeroext %44, i32 %45, i32 %46)
  ret void
}

declare dso_local i32 @qat_hal_rd_ae_csr(%struct.icp_qat_fw_loader_handle*, i8 zeroext, i32) #1

declare dso_local i32 @qat_hal_wr_ae_csr(%struct.icp_qat_fw_loader_handle*, i8 zeroext, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
